<resources>
    <string name="app_name">iBuzzServer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_configuration">Game Configuration</string>

    <string name="gameType">One Answer Only</string>

    <string name="phoneHelp">Phone</string>
    <string name="audienceHelp">Audience</string>
    <string name="halfHelp">50-50</string>

    <string name="scoreVisible">Visible Score </string>

    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="playersInformed">Inform Players</string>
    <string name="helpAvailable">Help Available</string>
    <string name="port">Port</string>
    <string name="maxNumberOfPlayers">Maximum number of players</string>
    <string name="questionsPerGame">questions #</string>
    <string name="waitingtimeforconnections">Answer Time</string>
    <string name="next"> NEXT >> </string>
    <string name="start"> START </string>

    <string name="scorePerCorrect">Score per correct answer</string>
    <string name="title_activity_about">About</string>

    <string name="aboutThodoris">Thodoris bla bla bla bla bla ...</string>
    <string name="aboutMinas">Minas bla bla bla bla bla ...</string>

    <string name="twitter">Twitter</string>
    <string name="blog">Blog</string>
    <string name="linkedin">LinkedIn</string>
    <string name="Instagram">LinkedIn</string>
    <string name="site">Site</string>
    <string name="author">Author</string>
    <string name="projectincommon">Lite Game</string>
    <string name="github">GitHub</string>
    <string name="instagram">Instagram</string>
    <string name="back">Back</string>

    <string name="round">Round</string>
    <string name="timeout">Time out</string>
    <string name="answered">Answered</string>
    <string name="players">Players</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="title_activity_first_screen">Home</string>

    <string name="configuration">Configuration</string>
    <string name="ranks">Ranking</string>
    <string name="about">About</string>

    <string name="buzz">Buzz %</string>
    <string name="years">Years</string>
    <string name="ratings">Rating</string>
    <string name="actors">Actors</string>
    <string name="genders">Gender</string>
    <string name="pointsPerQuestion">Points per Question</string>
    <string name="serverSounds">Server Sounds</string>
    <string name="updateDatabase">Update Database</string>
    <string name="title_activity_update_db">Update Database</string>
    <string name="updateServer">Update Server</string>
    <string name="keepCurrentEntries">Keep Current Entries</string>
    <string name="update">Update</string>
    <string name="exit">Exit</string>



    <!-- messages -->
    <string name="_m_checkErros">Check fields about</string>
    <string name="_m_correctanswerscore">correct answer score</string>
    <string name="_m_connectionport">connection port</string>
    <string name="_m_waitingtimeforanswer">waiting time for answer</string>
    <string name="_m_questionspergame">questions per game</string>
    <string name="_m_databaseupdated">Database Updated!</string>
    <string name="_m_player">Player</string>
    <string name="_m_disconnected">Disconnected</string>
</resources>
