


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.game.edu.ibuzzserver.UpdateDBActivity">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:layout_alignParentStart="true"
        android:background="@drawable/my_border">
        <TextView android:text="@string/updateDatabase" android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:background="@drawable/my_border_labels"
            android:padding="3dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_border_labels">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updateServer"
                android:id="@+id/textView11"
                android:background="@drawable/my_border_labels"
                android:padding="3dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/updateServerUrl"
                android:padding="3dp"
                android:background="@drawable/my_border_input" />


            </LinearLayout>



        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/my_border_labels">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keepCurrentEntries"
                android:id="@+id/textView12"
                android:autoText="false"
                android:background="@drawable/my_border_labels"
                android:padding="3dp" />

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keepCurrentEntries"
                android:id="@+id/updateButton"
                android:textOff="@string/no"
                android:textOn="@string/yes"
                android:background="@drawable/my_border_button"
                android:padding="3dp" />
            </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update"
            android:id="@+id/updateGo"
            android:onClick="updateDB"
            android:background="@drawable/my_border_button"
            android:padding="3dp" />


    </LinearLayout>


</RelativeLayout>


