
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.game.edu.ibuzzserver.FirstScreen"
    android:id="@+id/layout1"
    android:background="@drawable/my_border">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/button3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="goAbout"
        android:background="@drawable/my_border_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configuration"
        android:id="@+id/button4"
        android:layout_below="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button3"
        android:onClick="goConfig"
        android:background="@drawable/my_border_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ranks"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button4"
        android:onClick="goRanking"
        android:background="@drawable/my_border_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updateDatabase"
        android:id="@+id/update"
        android:layout_below="@+id/button5"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:onClick="update"
        android:background="@drawable/my_border_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/button6"
        android:layout_below="@+id/update"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/update"
        android:background="@drawable/my_border_button"
        android:onClick="exit" />
</RelativeLayout>
    </ScrollView>
