<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".HomeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app_name"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/my_border_labels"
            android:padding="3dp" />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:text="@string/timeout"
                android:id="@+id/timeoutlabel"
                android:background="@drawable/my_border_labels"
                android:padding="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:id="@+id/timeouttext"
                android:background="@drawable/my_border_input"
                android:padding="3dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round"
                android:layout_weight="0.55"
                android:id="@+id/roundlabel"
                android:background="@drawable/my_border_labels"
                android:padding="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:id="@+id/roundtext"
                android:background="@drawable/my_border_input"
                android:padding="3dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:text="@string/answered"
                android:id="@+id/answeredlabel"
                android:background="@drawable/my_border_labels"
                android:padding="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:text=""
                android:id="@+id/answeredtext"
                android:background="@drawable/my_border_input"
                android:padding="3dp" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:text="@string/players"
                android:id="@+id/playerslabel"
                android:background="@drawable/my_border_labels"
                android:padding="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.55"
                android:text=""
                android:id="@+id/playerstext"
                android:background="@drawable/my_border_input"
                android:padding="3dp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/questionPanel"
            android:background="@drawable/my_border_input"
            android:padding="5dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/button"
            android:layout_below="@+id/textView"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/textView"
            android:onClick="startServer"
            android:background="@drawable/my_border_button" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/numberOfConnectedPlayers"
            android:background="@drawable/my_border_labels"
            android:padding="3dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/connectedPlayersList"
            android:background="@drawable/my_border_labels"
            android:padding="3dp" />

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/playerslist"
            android:background="@drawable/my_border_input"
            android:padding="3dp" />

    </LinearLayout>





</RelativeLayout>

    </ScrollView>
